--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: BanditPAM
-Title: What the Package Does (One Line, Title Case)
+Title: Almost Linear-Time k-Mediods Clustering
 Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Authors@R: c(person("Balasubramanian", "Narasimhan", role=c("aut", "cre"),
+	   	   email = "naras@stanford.edu"),
+	     person("Mo", "Tiwari", role=c("aut"),
+	           comment = c(website = "https://motiwari.com")))
+Description: R interface to a high-performance implementation of k-Mediods clustering described in Tiwari, et. al (Advances in Neural Information Processing Systems 33: Annual Conference on Neural Information Processing Systems 2020).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -12,3 +13,8 @@ RoxygenNote: 7.2.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+LinkingTo: 
+    Rcpp,
+    RcppArmadillo
+Imports: 
+    Rcpp
