--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,18 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 SystemRequirements: C++14
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
 Suggests: 
+    ggplot2,
+    knitr,
+    MASS,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 LinkingTo: 
     Rcpp,
     RcppArmadillo
 Imports: 
+    R6,
     Rcpp
+VignetteBuilder: knitr
